wdit home page to match Business Requirement

--- a/src/main/webapp/i18n/ar-ly/home.json
+++ b/src/main/webapp/i18n/ar-ly/home.json
@@ -1,11 +1,11 @@
 {
   "home": {
-    "title": "أهلا وسهلا بك، جافا هبستر!",
-    "subtitle": "هذه صفحتك الرئيسية",
+    "title": "أهلا وسهلا بك، الضمان الاجتماعي!",
+    "subtitle": " تطبيق الاقرار السنوي ",
     "logged": {
       "message": "قمت بتسجيل الدخول كمستخدم \"{{username}}\"."
     },
-    "question": "إذا كان لديك أي سؤال حول JHipster:",
+    "question": "الضمان الاجتماعي كأداة هامة وفعالة وجوهرية لخلق التلاحم الاجتماعي وحق أساسي من حقوق الإنسان وهو لا غني عنه من السياسة الاجتماعية , ويؤدي دوراً هاماً في الحماية الاجتماعية , وفي إمكان الضمان الاجتماعي من خلال الضامن الوطني والمشاركة العادلة في الأعباء أن يسهم في تحقيق كرامة الإنسان وفي المساواة والعدالة الاجتماعية .",
     "link": {
       "homepage": "JHipster homepage",
       "stackoverflow": "JHipster on Stack Overflow",
