--- a/src/main/webapp/i18n/ar-ly/socialSecurityPensioner.json
+++ b/src/main/webapp/i18n/ar-ly/socialSecurityPensioner.json
@@ -2,11 +2,11 @@
   "annualDecJhApp": {
     "socialSecurityPensioner": {
       "home": {
-        "title": "Social Security Pensioners",
+        "title": "المضمونين",
         "refreshListLabel": "Refresh list",
-        "createLabel": "Create a new Social Security Pensioner",
-        "createOrEditLabel": "Create or edit a Social Security Pensioner",
-        "notFound": "No Social Security Pensioners found"
+        "createLabel": "انشاء مضمون جديد",
+        "createOrEditLabel": "انشاء او تعديل على مضمون",
+        "notFound": "لا يوجد مضمونين"
       },
       "created": "A new Social Security Pensioner is created with identifier {{ param }}",
       "updated": "A Social Security Pensioner is updated with identifier {{ param }}",
@@ -15,15 +15,15 @@
         "question": "Are you sure you want to delete Social Security Pensioner {{ id }}?"
       },
       "detail": {
-        "title": "Social Security Pensioner"
+        "title": "مضمون"
       },
       "id": "ID",
-      "nationalNumber": "National Number",
-      "pensionNumber": "Pension Number",
-      "dateOfBirth": "Date Of Birth",
-      "address": "Address",
-      "familyMembers": "Family Members",
-      "annualDeclaration": "Annual Declaration"
+      "nationalNumber": "الرقم الوطني",
+      "pensionNumber": "الرقم الضماني",
+      "dateOfBirth": "تاريخ الميلاد",
+      "address": "العنوان",
+      "familyMembers": "فرد العائلة",
+      "annualDeclaration": "الاقرار السنوي"
     }
   }
 }
