--- a/src/main/webapp/i18n/ar-ly/document.json
+++ b/src/main/webapp/i18n/ar-ly/document.json
@@ -2,27 +2,27 @@
   "annualDecJhApp": {
     "document": {
       "home": {
-        "title": "Documents",
+        "title": "المستندات",
         "refreshListLabel": "Refresh list",
-        "createLabel": "Create a new Document",
-        "createOrEditLabel": "Create or edit a Document",
+        "createLabel": "انشاء مستند جديد",
+        "createOrEditLabel": "انشاء او تحديث مستند",
         "notFound": "No Documents found"
       },
       "created": "A new Document is created with identifier {{ param }}",
       "updated": "A Document is updated with identifier {{ param }}",
       "deleted": "A Document is deleted with identifier {{ param }}",
       "delete": {
-        "question": "Are you sure you want to delete Document {{ id }}?"
+        "question": "هل انت متأكد من الحذف {{ id }}?"
       },
       "detail": {
-        "title": "Document"
+        "title": "مستند"
       },
       "id": "ID",
-      "fileName": "File Name",
-      "filePath": "File Path",
-      "submissionDate": "Submission Date",
-      "documentdType": "Documentd Type",
-      "annualDeclaration": "Annual Declaration"
+      "fileName": "اسم الملف",
+      "filePath": "مسار الملف",
+      "submissionDate": "تاريخ التقديم",
+      "documentdType": "نوع الملف",
+      "annualDeclaration": "الاقرار السنوي"
     }
   }
 }
