--- a/src/main/webapp/i18n/ar-ly/entitlementType.json
+++ b/src/main/webapp/i18n/ar-ly/entitlementType.json
@@ -2,11 +2,11 @@
   "annualDecJhApp": {
     "EntitlementType": {
       "null": "",
-      "PENSION": "pension",
-      "MEDICAL": "medical",
-      "EDUCATION": "education",
-      "HOUSING": "housing",
-      "OTHER": "other"
+      "PENSION": "مضمون",
+      "MEDICAL": " طبي",
+      "EDUCATION": "تعليم",
+      "HOUSING": "ربة منزل",
+      "OTHER": "اخرى"
     }
   }
 }
