National Number Validation in login form and Setting form

--- a/src/main/webapp/i18n/ar-ly/settings.json
+++ b/src/main/webapp/i18n/ar-ly/settings.json
@@ -35,7 +35,8 @@
         "nationalNumber": {
           "required": "مطلوب رقمك الوطني.",
           "minlength": "مطلوب رقمك الوطني ليكون على الأقل 12 حرف",
-          "maxlength": "لا يمكن أن يكون الرقم الوطني اكثر من 12 حرفا"
+          "maxlength": "لا يمكن أن يكون الرقم الوطني اكثر من 12 حرفا",
+          "pattern": "هناك خطأ في الرقم الوطني"
         },
         "pensionNumber": {
           "required": "مطلوب رقمك الضماني.",
