--- a/src/main/webapp/i18n/ar-ly/register.json
+++ b/src/main/webapp/i18n/ar-ly/register.json
@@ -11,8 +11,15 @@
           "minlength": "اسم المستخدم الخاصة بك مطلوب ليكون على الأقل 1 حرف.",
           "maxlength": "اسم المستخدم الخاصة بك لا يمكن أن يكون أطول من 50 حرفا.",
           "pattern": "Your username is invalid."
+        },
+        "nationalNumber": {
+          "required": "مطلوب رقمك الوطني.",
+          "minlength": "مطلوب رقمك الوطني ليكون على الأقل 12 حرف",
+          "maxlength": "لا يمكن أن يكون الرقم الوطني اكثر من 12 حرفا",
+          "pattern": "هناك خطأ في رقمك الوطني"
         }
       },
+
       "success": "<strong>تم التسجيل!</strong> يرجى التحقق من بريدك الالكتروني للحصول على تأكيد.",
       "error": {
         "fail": "<strong>فشل في التسجيل!</strong> الرجاء إعادة المحاولة في وقت لاحق.",
